src/objects/loan__Custom_Logic_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Batch_Job_Query_Class__c</fullName>
        <label>Batch Job Query Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Date_Util_Class__c</fullName>
        <label>Date Util Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Funding_Class__c</fullName>
        <label>Funding Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Processing_Class__c</fullName>
        <label>Payment Processing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reversal_Class__c</fullName>
        <label>Reversal Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Logic Parameters</label>
</CustomObject>